syntax = "proto3";
package kratos.api;

option go_package = "github.com/project-kessel/relations-api/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
    string pathprefix = 4;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
  optional string minLogLevel = 3;

  message Auth {
    bool enableAuth = 1;
    string jwksUrl = 2;
  }
  Auth auth = 4;
}

message Data {
  message SpiceDb {
    bool useTLS = 1;
    string endpoint = 2;
    string token = 3;
    string tokenFile = 4;
    string schemaFile = 5;
  }
  SpiceDb spiceDb = 1;
}
